# weave-initial-course

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/00_setup/: 00_environment_setup.ipynb
notebooks/01_basics/: 01_traces_and_ops.ipynb  02_assets.ipynb  03_evaluations.ipynb
notebooks/02_practice/: 01_simple_agent.ipynb  02_langgraph_agent.ipynb
notebooks/03_advanced/: 01_wandb_models_registry.ipynb  02_art_intro.ipynb  03_art_agentic_rl.ipynb
notebooks/appendix/: A_wandb_skills.ipynb  B_mcp_server.ipynb
